--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body{
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0px 0px 20px 1px hsla(0, 0%, 0%, 0.2);
+    position: relative;
 }
 .section1{
     height: 37%;
